--- a/index.html
+++ b/index.html
@@ -53,30 +53,23 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">Conocimientos</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-                        <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
+                        <div class="container mt-3">
+                            <ul class="list-group list-group-flush">
+                              <li class="list-group-item">Python</li>
+                              <li class="list-group-item">HTML & CSS</li>
+                              <li class="list-group-item">Java</li>
+                              <li class="list-group-item">C#</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Services-->
-        <section class="page-section" id="services">
-            <div class="container px-4 px-lg-5">
-                <h2 class="text-center mt-0">Servicios</h2>
-                <hr class="divider" />
-               
-            </div>
-        </section>
-        <!-- Portfolio-->
-        <div id="portfolio">
-            
-        </div>
-
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2023 - Company Name</div></div>
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2024 - Ravelo-Dev</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
